# EcoFood

./: .env.example  .gitignore  Agent_Quality.txt  Agent_Tools_&_Interoperability_with_Model_Context_Protocol_(MCP).txt  Context_Engineering__Sessions_&_Memory.txt  FEATURES.md  Introduction_to_Agents.txt  LICENSE  Prototype_to_Production.txt  README.md  docker-compose.yml
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
backend/: Dockerfile  README.md  pyproject.toml
backend/src/ecofood_backend/: database.py  main.py  models.py  schemas.py  utils.py
backend/src/ecofood_backend/agent/: __init__.py
backend/src/ecofood_backend/agent/a2a/: __init__.py  agents.py  context.py  plan_runner.py  workflow.py
backend/src/ecofood_backend/agent/clients/: __init__.py  gemini.py
backend/src/ecofood_backend/agent/dialog/: __init__.py  household_assistant.py
backend/src/ecofood_backend/agent/tools/: __init__.py
backend/src/ecofood_backend/agent/tools/mcp/: __init__.py  calendar_tools.py  chef.py  household.py  models.py  nutrition.py  pantry.py  plans.py  recipes.py  registry.py  shopping.py  tools.py
backend/src/ecofood_backend/mcp/: calendar_server.py  host.py
backend/src/ecofood_backend/routers/: __init__.py  households.py  meal_plans.py  plan_jobs.py
backend/src/ecofood_backend/services/: households.py  meal_plans.py  plan_jobs.py
mcp_sdk/: __init__.py  core.py
