[project]
name = "ecofood-backend"
version = "0.1.0"
description = "EcoFood multi-agent and AI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "SQLAlchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "google-generativeai>=0.7.0"
]

[project.optional-dependencies]
observability = [
  "langfuse>=2.0.0"
]

[project.scripts]
ecofood-backend = "ecofood_backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
